resources/experiment/0814-specgen/081403/log-Calculator_Original-2025_08_15_13_43_57.txt
public class Calculator_Original {

    /*@ public normal_behavior
      @ requires operator == '+' || operator == '-' || operator == '*' || 
      @          operator == '/' || operator == '%';
      @ requires operator == '/' || operator == '%' ==> num2 != 0;
      @ ensures (operator == '+' ==> \result == num1 + num2) &&
      @         (operator == '-' ==> \result == num1 - num2) &&
      @         (operator == '*' ==> \result == num1 * num2) &&
      @         (operator == '/' ==> \result == num1 / num2) &&
      @         (operator == '%' ==> \result == num1 % num2);
      @ also
      @ public exceptional_behavior
      @ requires operator != '+' && operator != '-' && operator != '*' && 
      @          operator != '/' && operator != '%';
      @ ensures \result == -1;
      @*/
    public static int calculate(int num1, int num2, char operator) {
        int output;
        switch(operator) {
            case '+':
                output = num1 + num2;
                break;
            case '-':
                output = num1 - num2;
                break;
            case '*':
                output = num1 * num2;
                break;
            case '/':
                output = num1 / num2;
                break;
            case '%':
                output = num1 % num2;
                break;
            default:
                return -1;
        }
        return output;
    }
}
==============================
/root/specgen/SpecGen/project/081403-specgen/tmp/Calculator_Original.java:16: error: Ensures clauses are not permitted in exceptional specification cases
      @ ensures \result == -1;
        ^
1 error

==============================
public class Calculator_Original {

    /*@ public normal_behavior
      @ requires operator == '+' || operator == '-' || operator == '*' || 
      @          operator == '/' || operator == '%';
      @ requires operator == '/' || operator == '%' ==> num2 != 0;
      @ ensures (operator == '+' ==> \result == num1 + num2) &&
      @         (operator == '-' ==> \result == num1 - num2) &&
      @         (operator == '*' ==> \result == num1 * num2) &&
      @         (operator == '/' ==> \result == num1 / num2) &&
      @         (operator == '%' ==> \result == num1 % num2);
      @ also
      @ public behavior
      @ requires operator != '+' && operator != '-' && operator != '*' && 
      @          operator != '/' && operator != '%';
      @ signals_only \nothing;
      @ ensures \result == -1;
      @*/
    public static int calculate(int num1, int num2, char operator) {
        int output;
        switch(operator) {
            case '+':
                output = num1 + num2;
                break;
            case '-':
                output = num1 - num2;
                break;
            case '*':
                output = num1 * num2;
                break;
            case '/':
                output = num1 / num2;
                break;
            case '%':
                output = num1 % num2;
                break;
            default:
                return -1;
        }
        return output;
    }
}
==============================

==============================
